// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Screenshot component should render correctly 1`] = `
<Screenshot
  project={
    Object {
      "client": Object {
        "link": "https://example.com",
        "title": "Client Co",
      },
      "content": "
Alpha project description.
      ",
      "date": "2024",
      "image": Object {
        "height": 300,
        "width": 400,
      },
      "link": "https://example.com/alpha",
      "title": "Project Alpha",
    }
  }
  slug="alpha"
>
  <a
    className="ScreenshotLink"
    href="https://example.com/alpha"
  >
    <div
      className="Screenshot"
      style={
        Object {
          "width": "400px",
        }
      }
    >
      <div
        className="Screenshot-shim"
        style={
          Object {
            "paddingTop": "75%",
          }
        }
      />
      <img
        alt="Project Alpha"
        className="Screenshot-image"
        height={300}
        onLoad={[Function]}
        src={
          Object {
            "default": "test-file-stub",
          }
        }
        translate="no"
        width={400}
      />
    </div>
  </a>
</Screenshot>
`;

exports[`Screenshot component should render correctly 2`] = `
<Screenshot
  project={
    Object {
      "client": null,
      "content": "
Beta project description.
      ",
      "date": "2023",
      "image": Object {
        "height": 200,
        "width": 320,
      },
      "link": "",
      "title": "Project Beta",
    }
  }
  slug="beta"
>
  <div
    className="Screenshot"
    style={
      Object {
        "width": "320px",
      }
    }
  >
    <div
      className="Screenshot-shim"
      style={
        Object {
          "paddingTop": "62.5%",
        }
      }
    />
    <img
      alt="Project Beta"
      className="Screenshot-image"
      height={200}
      onLoad={[Function]}
      src={
        Object {
          "default": "test-file-stub",
        }
      }
      translate="no"
      width={320}
    />
  </div>
</Screenshot>
`;
